05/1과제/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skills
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
