05/1과제/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: book-allow-alb-only
  namespace: skills
spec:
  podSelector:
    matchLabels:
      app: book
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.10.0/24
        - ipBlock:
            cidr: 10.0.11.0/24
      ports:
        - protocol: TCP
          port: 8080
